Adds README, improves design on mobile

--- a/src/blackout.html.twig
+++ b/src/blackout.html.twig
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>{{ headline }}</title>
-    <meta property="keywords" content="blackout21, 321EUOfflineDay, blackout, article11, article13, saveyourinternet">
+    <meta name="keywords" content="blackout21, 321EUOfflineDay, blackout, article11, article13, saveyourinternet">
     <meta property="og:title" content="{{ headline }}">
     <meta property="og:description" content="{{ intro }}">
     <meta property="og:type" content="website">
@@ -34,6 +34,7 @@
             max-width: 950px;
             margin: auto;
             color: #fff;
+            padding: 10px;
         }
 
         main :first-child {
@@ -48,6 +49,11 @@
 
         a, a:link {
             color: #fff;
+        }
+
+        li {
+            margin-top: 5px;
+            margin-bottom: 10px;
         }
     </style>
 </head>
